2010-12-01  Sam Steingold  <sds@gnu.org>

	* pathname.d (SET-LIB-DIRECTORY): call TRUENAME on argument to
	ensure an existing absolute path

2010-11-29  Sam Steingold  <sds@gnu.org>

	fix bug#3122505: LOAD does not close FAS files with a bad version marker
	* init.lisp (open-for-load): catch errors when READing the version
	marker

2010-11-26  Sam Steingold  <sds@gnu.org>

	* constsym.d, subr.d, subrkw.d, stream.d (make_stream, stream_handles):
	define even when SOCKET_STREAMS is not defined

2010-11-25  Sam Steingold  <sds@gnu.org>

	* init.lisp, constsym.d (stream-handles): move from SOCKET to EXT

2010-11-21  Sam Steingold  <sds@gnu.org>

	* makemake.in: use ${MODULESDIR_} instead of ${SRCTOPDIR}modules

2010-11-14  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: thread safe GENSYM and GENTEMP
	* lispbibl.d (gensym_lock, gentemp_lock): add locks guarding gensym and
	gentemp counters
	* spvw.d (init_multithread): initialize gensym_lock and gentemp_lock
	* defs1.lisp (GENTEMP): remove. implemented in C
	* subr.d, constsym.d: add GENTEMP to subr and symbol tables
	* constobj.d: add gentemp prefix and counter to object table
	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): remove *gensym-counter*
	* symbol.d: define gensym_lock, gentemp_lock
	(GENSYM): re-implement. lock *gensym-counter* increment
	(GENTEMP): implement in C

2010-11-08  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (check_sockopt_name): add
	(get_sock_opt, set_sock_opt): use it instead of NOTREACHED

2010-10-30  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: add optional :TEST predicate to MT:EXEMPTION-WAIT
	* subr.d, subrkw.d (EXEMPTION-WAIT): accept optional :TEST argument
	* xthread.d (xcondition_wait): accept timeout as void pointer. with
	POSIX_THREADS it is absolute struct timespec, with WIN32_THREADS it is
	unsigned integer specifying milliseconds to wait
	* zthread.d (EXEMPTION-WAIT): loop until :TEST predicate is satisfied